--- a/tutorials/match-game/package.json
+++ b/tutorials/match-game/package.json
@@ -3,8 +3,8 @@
 	"version": "1.0.0",
 	"description": "A  Phaser 3 project using Parceljs",
 	"scripts": {
-		"start": "npm run copy-assets & npx parcel src/index.html -p 8000",
-		"build": "npm run copy-assets & npx parcel build src/index.html",
+		"start": "npx parcel src/index.html -p 8000",
+		"build": "npx parcel build src/index.html & npm run copy-assets",
 		"test": "echo \"Error: no test specified\" && exit 1",
 		"copy-assets": "cp -r src/assets/* dist/*"
 	},
