--- a/tutorials/match-game/package.json
+++ b/tutorials/match-game/package.json
@@ -6,7 +6,7 @@
 		"start": "npx parcel src/index.html -p 8000",
 		"build": "npx parcel build src/index.html & npm run copy-assets",
 		"test": "echo \"Error: no test specified\" && exit 1",
-		"copy-assets": "cp -r src/assets/* dist/*"
+		"copy-assets": "cp -r src/assets/* dist"
 	},
 	"author": "supertommy",
 	"license": "MIT",
